src/components/overflow-menu/_overflow-menu.scss
//-----------------------------
// Overflow Menu
//-----------------------------

@import '../../globals/scss/vars';
@import '../../globals/scss/colors';
@import '../../globals/scss/spacing';
@import '../../globals/scss/helper-mixins';
@import '../../globals/scss/css--reset';
@import '../../globals/scss/layer';
@import '../../globals/scss/layout';
@import '../../globals/scss/typography';
@import '../../globals/scss/import-once';

@include exports('overflow-menu') {
  .#{$prefix}--overflow-menu {
    @include reset;
    position: relative;
    width: rem(20px);
    height: rem(38px);
    cursor: pointer;

    &:focus {
      outline: 1px solid transparent;
      box-shadow: 0 0 0 1px $brand-01;
    }
  }

  .#{$prefix}--overflow-menu__icon {
    width: 100%;
    height: 100%;
    padding: 0.5rem;
    fill: $ui-05;

    &:hover,
    &:focus {
      fill: $hover-secondary;
    }
  }

  .#{$prefix}--overflow-menu-options {
    @include reset;
    @include layer('overlay');
    display: none;
    flex-direction: column;
    align-items: flex-start;
    position: absolute;
    z-index: z('floating');
    background-color: $inverse-01;
    border: 1px solid $ui-03;
    width: 11.25rem;
    list-style: none;
    margin-top: $spacing-2xs;
    padding: $spacing-2xs 0 $spacing-xs;
    left: -20px;
  }

  .#{$prefix}--overflow-menu-options--open {
    display: flex;
  }

  .#{$prefix}--overflow-menu-options:before {
    content: '';
    position: absolute;
    display: block;
    width: rem(8px);
    height: rem(8px);
    z-index: -1;
    transform: rotate(45deg);
    background-color: $inverse-01;
    border-top: 1px solid $ui-03;
    border-left: 1px solid $ui-03;
    top: -5px;
    left: 24px;
  }

  .#{$prefix}--overflow-menu-options__option {
    @include reset;
    display: flex;
    background-color: transparent;
    align-items: center;
    width: 100%;
    padding: 0;
  }

  .#{$prefix}--overflow-menu--divider {
    border-top: 1px solid $ui-03;
  }

  .#{$prefix}--overflow-menu-options__btn {
    @include reset;
    @include typescale('zeta');
    @include font-family;
    font-weight: 400;
    width: 100%;
    height: 100%;
    border: none;
    display: inline-block;
    background-color: transparent;
    text-align: left;
    padding: $spacing-xs $spacing-md;
    cursor: pointer;
    color: $text-01;

    &:focus {
      outline: 1px solid transparent;
      text-decoration: underline;
      background-color: $hover-row;
      text-decoration: underline;
    }

    .#{$prefix}--overflow-menu-options__option--danger & {
      &:focus {
        outline: 1px solid transparent;
        text-decoration: underline;
      }
    }
  }

  .#{$prefix}--overflow-menu-options__option:hover {
    background-color: $hover-row;
  }

  .#{$prefix}--overflow-menu-options__option:hover .#{$prefix}--overflow-menu-options__btn {
    text-decoration: none;
    background-color: $hover-row;
    text-decoration: none;
  }

  .#{$prefix}--overflow-menu-options__option--danger {
    border-top: 1px solid $ui-03;
  }

  .#{$prefix}--overflow-menu-options__option--danger {
    .bx--overflow-menu-options__btn {
      &:hover,
      &:focus {
        color: $inverse-01;
        background-color: $support-01;
      }
    }
  }

  .#{$prefix}--overflow-menu-options__option--disabled:hover {
    background-color: $ui-01;
  }

  .#{$prefix}--overflow-menu-options__option--disabled .#{$prefix}--overflow-menu-options__btn {
    color: $text-01;
    cursor: not-allowed;
    opacity: 0.5;
  }

  .#{$prefix}--overflow-menu-options__option--disabled:hover .#{$prefix}--overflow-menu-options__btn {
    color: $text-01;
    opacity: 0.5;
    background-color: $ui-01;

    &:active,
    &:focus {
      background-color: $ui-01;
      pointer-events: none;
    }
  }

  .#{$prefix}--overflow-menu--flip {
    left: -140px;

    &:before {
      left: 145px;
    }
  }
}

